Update css, update codesource to work with show context feature

--- a/client-side/src/core/css/less/project/section.less
+++ b/client-side/src/core/css/less/project/section.less
@@ -18,8 +18,8 @@
 		font-weight: normal;
 		color: #333;
 
-		-moz-border-radius: 5px;
-		border-radius: 5px;
+		-moz-border-radius: 10px;
+		border-radius: 10px;
 		background-color: #f1f2f3;
 
 		font-family: inherit;
@@ -151,10 +151,13 @@
 		content: "▼";
 		}
 
-    .source_source-code__show, .source_source-code__static {
+    .source_source-code__show, .source_source-code__static, .source_context.__show {
 		display: block !important;
 		}
 
+    .source_context {
+        display: none !important;
+        }
 	}
 
 /* Header actions */
