--- a/client-side/src/core/css/less/project/info.less
+++ b/client-side/src/core/css/less/project/info.less
@@ -56,6 +56,7 @@ body p.source_doc, /* cascade for weight */
     padding: 10px 25px;
 
     background: #DCFCDA;
+    font-family: Menlo, Monaco, Consolas, monospace;
     }
 
 body p.source_data, /* cascade for weight */
