file-tree is modified to add versions processing; versioning select-box is added

--- a/assets/css/project/layout.less
+++ b/assets/css/project/layout.less
@@ -116,5 +116,10 @@
 	font-size: 14px;
 	}
 
+.versioning_selectbox {
+    margin-left: 20px;
+    vertical-align: middle;
+    }
+
 /* /Layout
 ---------------------------------------------------------------------------------- */
